--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header {
+    width: 100%;
+    height: 100px;
+    background-color: #4ea0ff;
+    background-image: url('/img/pattern.png');
+}
