--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,16 @@
 
 header {
     width: 100%;
-    height: 100px;
+    height: 175px; /* 50% della "height" di pattern.png */
     background-color: #4ea0ff;
-    background-image: url('/img/pattern.png');
+    background-image: url('../img/pattern.png');
+    position: relative
+}
+
+#logo {
+    width: 30%;
+    height: 30%;
+    position: absolute;
+    bottom: 10px;
+    left: -100px;
 }
