--- a/css/style.css
+++ b/css/style.css
@@ -41,5 +41,34 @@ h4 span {
 }
 
 ul {
-    padding-left: 40px;
+    padding-left: 30px;
+}
+
+.color_thead {
+    background-color: #20a9e5;
+}
+
+.color_tbody {
+    background-color: #b1e5f2;
+}
+
+#pop-up1 {
+    width: 250px;
+    height: 150px;
+    margin: 20px;
+    padding: 10px;
+    color: white;
+    background-image: url("../img/monitor.jpg");
+    background-size: cover;
+}
+
+#pop-up2 {
+    width: 250px;
+    height: 150px;
+    margin: 20px;
+    margin-bottom: 50px;
+    padding: 10px;
+    color: white;
+    background-image: url(../img/graph.jpg);
+    background-size: cover;
 }
